# multi_agent_project

./: .dockerignore  .gitignore  README.md  pyproject.toml
agents/: __init__.py
agents/domain/: __init__.py
agents/domain/coding/: agent.py
agents/domain/entertainment/: agent.py
agents/domain/finance/: agent.py
agents/domain/medical/: agent.py  graph.py  prompts.py
agents/domain/office/: agent.py
agents/specialized/: __init__.py  approval_agent.py  approval_agent_new.py  chat_agent.py  chat_agent_new.py  code_agent.py  multimodal_agent.py  multimodal_agent_new.py  rag_agent.py  rag_agent_new.py
agents/specialized/component/: approval_agent_humaninloop.py  approval_agent_workflow.py
agents/supervisor/: __init__.py  router.py  supervisor_agent.py  supervisor_agent_new.py  workflows.yaml
apis/business/: app.py
apis/gateway/: app.py  app_new.py
apis/gateway/routes/v1/: agent.py
channels/: __init__.py  base.py
channels/hermes/: server.py  skill_exporter.py
channels/web/: app.py  app_new.py
channels/wechat/: bot.py  bot_new.py  handlers.py  oauth.py
config/: agent_registry.yaml  channels.yaml  logging.yaml  settings.py  skill_registry.yaml
core/: __init__.py  agent_base.py  encryption.py  exceptions.py  graph_base.py  optimizer.py  security.py  state_base.py
data/chroma/: chroma.sqlite3
data/input/: 我的文档.txt
data/sqlite/: app.db
docker/: Dockerfile  deploy.sh  docker-compose.yml  setup.py  supervisord.conf
docker/volumes/agent/chroma_db/: chroma.sqlite3
docker/volumes/agent/memory/: memory.db
docker/volumes/nginx/: nginx.conf
docs/about/: 工程结构说明.txt
evaluation/evals/: task_finance.json  task_medical.json
evaluation/graders/: code_grader.py  llm_grader.py  metrics.py
evaluation/runners/: batch_runner.py  multiround_runner.py  unit_runner.py
graphs/: __init__.py  main_graph.py  main_graph_new.py  state_schema.py
graphs/subgraphs/: approval_subgraph.py  human_review.py  rag_subgraph.py
llm/: base.py  embeddings.py  factory.py
llm/providers/: ollama_client.py
memory/checkpointer/: sqlite_checkpointer.py
memory/long_term/: graph_store.py  hybrid_retriever.py  log_store.py  vector_store.py
memory/long_term/schemas/: chroma_models.py  chroma_models_new.py  neo4j_models.py  neo4j_models_new.py
memory/short_term/: redis_store.py  session_store.py  session_store_new.py
tests/unit/test_tools/: test_tools.py
tools/: base_tool.py  registry.py
tools/builtin/: web_search.py
tools/skills/: coding_skills.py  finance_skills.py  medical_skills.py  registry_loader.py
workflows/: engine.py
workflows/dag/: finance_risk.yaml  order_processing.yaml
