[project]
name = "multi-agent-project"
version = "0.1.0"
description = ""
authors = [
    {name = "wukaitao",email = "wukaitao2006@163.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "langgraph (==1.1.10)",
    "langchain (==1.2.15)",
    "llama-index (==0.14.21)",
    "llama-index-llms-ollama (==0.10.1)",
    "llama-index-embeddings-ollama (==0.9.0)",
    "llama-index-vector-stores-chroma (==0.5.5)",
    "chromadb (==1.5.7)",
    "py2neo (==2021.2.4)",
    "streamlit (==1.56.0)",
    "openai-whisper (==20250625)",
    "edge-tts (==7.2.8)",
    "requests (==2.33.1)",
    "python-dotenv (==1.2.2)",
    "pydantic (==2.12.3)",
    "pillow (==11.3.0)",
    "aiohttp (==3.13.5)",
    "flux-local (==8.2.0)",
    "datetime (==6.0)",
    "fastapi (==0.136.1)",
    "uvicorn (==0.44.0)",
    "neo4j-graphrag (==1.16.1)",
    "cryptography (>=48.0.0,<49.0.0)",
    "langchain-core (>=1.4.8,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "restrictedpython (>=8.3,<9.0)",
    "python-json-logger (>=4.1.0,<5.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "llvmlite (==0.47.0)",
    "numpy (==2.4.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pywin32 (>=312,<313)",
    "cython (>=3.2.5,<4.0.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

